objects/Mask__c.object
<CustomObject>
    <fields>
        <fullName>Is_Mask_Modified_Y_N__c</fullName>
        <formula>IF(TRIM(Original_Mask__c) != TRIM(Modified_Mask__c), &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Is Mask Modified(Y/N)?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Mask_Modified__c</fullName>
        <description>Note that the formula contains the domain of the image. This is because field is also used in Community that contains a different domain so we should use the full path.</description>
        <formula>IF(TRIM(Original_Mask__c) != TRIM(Modified_Mask__c), IMAGE(&quot;https://globalfoundries--preprod.cs57.my.salesforce.com/servlet/servlet.FileDownload?file=&lt;ID FROM checkImage ON  &apos;4 - Data Load &amp; Update; worksheet&gt;&quot;, &quot;Yes&quot;), IMAGE(&quot;https://globalfoundries--preprod.cs57.my.salesforce.com/servlet/servlet.FileDownload?file=&lt;ID FROM crossImage ON  &apos;4 - Data Load &amp; Update; worksheet&gt;&quot;, &quot;No&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mask layers allow for edit with the following Reason for New Part:
i) Retrofit:  base layers (with dash)
ii) Add ROM Code: ROM layers (without dash)
iii) Retrofit + Add ROM Code, Others: ALL mask layers (base + ROM)</inlineHelpText>
        <label>Is Mask Modified?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layer__c</fullName>
        <label>Layer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_Mask__c</fullName>
        <label>Modified Mask</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Part_Creation_Form__c</fullName>
        <label>New Part Creation Form</label>
        <referenceTo>New_Part_Creation_Form__c</referenceTo>
        <relationshipLabel>Masks</relationshipLabel>
        <relationshipName>Masks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Mask__c</fullName>
        <label>Original Mask</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mask</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MASK-{0000000000}</displayFormat>
        <label>Mask</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Masks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>